HP updated course material

--- a/weekly_content/Week_01_1-Objects_Variables.ipynb
+++ b/weekly_content/Week_01_1-Objects_Variables.ipynb
@@ -179,8 +179,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8eaf9225-77d8-43f8-9579-3769751e366f",
+   "metadata": {},
+   "source": [
+    "# Variable Reassignment \n",
+    "\n",
+    "We can reassign the value of an existing variable  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e47415c5-f690-4a80-97cd-b740584ea4be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "\n",
+    "a = 2\n",
+    "\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "105a9fd6",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -216,7 +241,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
