--- a/weekly_content/Week_05_1-Lists.ipynb
+++ b/weekly_content/Week_05_1-Lists.ipynb
@@ -51,7 +51,7 @@
    "source": [
     "# Aims\n",
     "\n",
-    "This week we will introduce three new data types that extend the functionality of Python:\n",
+    "This week we will introduce three new data types:\n",
     "\n",
     "* Lists\n",
     "* Tuples\n",
@@ -439,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
