HP updated week 08 lab

--- a/weekly_labs/Week_08_Reading_Data/Week_08_1-Importing_files.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/Week_08_1-Importing_files.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Computer Programming and Algorithms\n",
     "\n",
-    "## Week 6.1: Reading files\n",
+    "## Week 6.1: Importing Files\n",
     "\n",
     "<img src=\"img/full-colour-logo-UoB.png\" alt=\"Bristol\" style=\"width: 300px;\"/>"
    ]
@@ -94,10 +94,10 @@
    "source": [
     "Examples: <br>File Path to myfile.txt from the root (top-most) directory of the file system. \n",
     "\n",
-    "'<span style=\"color:blue\">C:\\Users\\YourUsername\\Documents\\ <span style=\"color:red\">myfile</span><span style=\"color:green\">.txt</span>'\n",
+    "'<span style=\"color:blue\">C:\\Users\\YourUsername\\Documents\\ </span><span style=\"color:red\">myfile</span><span style=\"color:green\">.txt</span>'\n",
     "<br><span style=\"color:black\">(Windows)\n",
     "\n",
-    "'<span style=\"color:blue\">/home/YourUsername/Documents/ <span style=\"color:red\">myfile</span><span style=\"color:green\">.txt</span>'\n",
+    "'<span style=\"color:blue\">/home/YourUsername/Documents/</span><span style=\"color:red\">myfile</span><span style=\"color:green\">.txt</span>'\n",
     "<br><span style=\"color:black\">(Unix)"
    ]
   },
@@ -127,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the file system below. <br>Assume the directory `YourUsername` is on the root directory:\n",
+    "Consider the file system below. \n",
     "\n",
     "```python\n",
     "YourUsername/\n",
@@ -154,7 +154,8 @@
     "        |--- README.txt  \n",
     "```\n",
     "***\n",
-    "__Global path__ (root to temperature.csv) \n",
+    "__Global path__ (from root directory to temperature.csv)\n",
+    "<br>Assume the directory `YourUsername` is on the root directory, in directory called `Users` (Windows) or `home` (Unix) \n",
     "```\n",
     "'C:\\Users\\YourUsername\\Documents\\README.txt'\n",
     "\n",
@@ -167,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Local path__ (main.py to README.txt)\n",
+    "__Local path__ (from main.py to README.txt)\n",
     "```\n",
     "'README.txt'\n",
     "```"
@@ -177,8 +178,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the file system below. <br> Assume the directory `YourUsername` is on the root directory:\n",
-    "\n",
+    "Consider the file system below. \n",
     "```python\n",
     "YourUsername/\n",
     "|\n",
@@ -210,7 +210,8 @@
     "               |--- temperature.csv\n",
     "```\n",
     "***\n",
-    "__Global path__ (root to temperature.csv) \n",
+    "__Global path__ (from root to temperature.csv) \n",
+    "<br>Assume the directory `YourUsername` is on the root directory, in directory called `Users` (Windows) or `home` (Unix) \n",
     "```\n",
     "'C:\\Users\\YourUsername\\Documents\\data\\temperature.csv'\n",
     "\n",
@@ -227,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the following examples we will us the local file path:\n",
+    "In the following examples we will us the __local path__, not the __global path__:\n",
     "- shorter\n",
     "- unchanged by location of files on file system, providing their location relative to each other doesn't change\n"
    ]
@@ -284,7 +285,7 @@
     }
    },
    "source": [
-    "When you are finished reading in the contents of a file, the file needs to be closed:\n",
+    "Before the program exits, the file must be closed:\n",
     "```python\n",
     "file.close()\n",
     "```"
@@ -342,8 +343,8 @@
    "source": [
     "__Import path:__\n",
     "The directories from which a file can be read by a program. \n",
-    "- Includes downstream directories\n",
-    "- Excludes upstream directories by default "
+    "- *Includes* downstream directories\n",
+    "- *Excludes* upstream directories by default "
    ]
   },
   {
@@ -355,7 +356,7 @@
     "import sys\n",
     "sys.path.append('../')\n",
     "```\n",
-    "Where one directory upstream is denoted by "
+    "Where one directory upstream is denoted by `../`"
    ]
   },
   {
@@ -394,7 +395,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The same process can be used to access directories that are downstream of an upstream directory but not downstream of the current working directory"
+    "The same process can be used to access directories that are:\n",
+    "- downstream of an upstream directory\n",
+    "- not downstream of the current working directory"
    ]
   },
   {
