--- a/weekly_seminars/Seminar_01-Notions.ipynb
+++ b/weekly_seminars/Seminar_01-Notions.ipynb
@@ -337,6 +337,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://www.bbc.co.uk/news/live/uk-66637817\"><img style=\"float: right;\" width=\"300\" src=\"imgs/Screenshot 2024-08-28 163448.png\"></a>\n",
+    "\n",
     "Such errors are harder to find as they may only occur under certain conditions.  Anticipating weird cases is part of the art of programming... and if you're reading data in from outside, part of your job is to validate it before running with it.\n",
     "\n",
     "> In August 2023, flights all across the UK were delayed because of an unexpected combination of waypoints in a flightplan submitted by an airline https://www.caa.co.uk/our-work/publications/documents/content/cap2981/\n",
@@ -367,6 +369,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a href=\"https://en.wikipedia.org/wiki/Mars_Climate_Orbiter#Cause_of_failure\"><img style=\"float: right;\" width=\"300\" src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Mars_Climate_Orbiter_-_mishap_diagram.png/800px-Mars_Climate_Orbiter_-_mishap_diagram.png\"></a>\n",
+    "\n",
     "Eh? 32 is freezing point in Fahrenheit, so why is this not zero?  The formula looks right...\n",
     "\n",
     "> In 1999, this kind of error caused the loss on (or near) Mars of a $300M spacecraft https://en.wikipedia.org/wiki/Mars_Climate_Orbiter "
