Moved image to top level img folder

--- a/weekly_seminars/Seminar_01-Notions.ipynb
+++ b/weekly_seminars/Seminar_01-Notions.ipynb
@@ -337,7 +337,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://www.bbc.co.uk/news/live/uk-66637817\"><img style=\"float: right;\" width=\"300\" src=\"imgs/Screenshot 2024-08-28 163448.png\"></a>\n",
+    "<a href=\"https://www.bbc.co.uk/news/live/uk-66637817\"><img style=\"float: right;\" width=\"300\" src=\"../img/Screenshot 2024-08-28 163448.png\"></a>\n",
     "\n",
     "Such errors are harder to find as they may only occur under certain conditions.  Anticipating weird cases is part of the art of programming... and if you're reading data in from outside, part of your job is to validate it before running with it.\n",
     "\n",
