HP edited intro material

--- a/weekly_labs/Week_01_Objects/Week_01_1-Objects_Variables.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_1-Objects_Variables.ipynb
@@ -263,12 +263,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 1,
    "id": "76d89011-4a85-4a80-95e3-4896442fbd59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 3 3\n"
+     ]
+    }
+   ],
    "source": [
-    "a = b = c = 3"
+    "a = b = c = 3\n",
+    "\n",
+    "print(a, b, c)"
    ]
   },
   {
@@ -290,24 +300,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "fbe5b317-de23-4e0a-884b-13210d82bf37",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3 3 4\n"
-     ]
-    }
-   ],
-   "source": [
+    "a = b = c = 3\n",
+    "\n",
+    "c = 4\n",
+    "\n",
     "print(a, b, c)"
    ]
   },
