--- a/weekly_labs/Week_01_Objects/Week_01_2-Integers_Floating_Point.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_2-Integers_Floating_Point.ipynb
@@ -468,13 +468,15 @@
     "\n",
     "**Example**:It is not possible to represent the mantissa $-\\frac{1}{16}$ with 4 bits\n",
     "\n",
-    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/impossible_mantissa_full.png?raw=true\" width=\"40%\">\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/impossible_mantissa_full.png?raw=true\" width=\"40%\">\n",
     "\n",
     "***\n",
     "\n",
     "**Example**:It is not possible to represent the exponent $-15$ with 4 bits\n",
     "\n",
     "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/impossible_exponent_full.png?raw=true\" width=\"40%\">\n",
+    "\n",
+    "(Note, if the first bit was $-16$ (shaded orange), the second bit would be $8$ not $-8$)\n",
     "\n",
     "\n",
     "\n",
@@ -817,7 +819,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
