--- a/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
@@ -27,7 +27,7 @@
    },
    "source": [
     "# String (`str`)\n",
-    "A collection of characters (alphabetical, numerical, or other e.g. punctuation)"
+    "A collection of characters (alphabetical, numerical, or other e.g. punctuation) enclosed within single (`'...'`) or double (`\"...\"`) quotation marks.  "
    ]
   },
   {
@@ -62,24 +62,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22f4d2d2",
+   "id": "70a185c9",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "A collection of characters is a string if it is enclosed within single (`'...'`) or double (`\"...\"`) quotation marks.  "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "70a185c9",
-   "metadata": {},
-   "source": [
     "# String value storage \n",
     "\n",
-    "Strings are stored on a computer as a series of bytes (8 digit binary number). \n",
+    "Strings are stored on a computer as a series of bytes (8 bit number). \n",
     "\n",
     "An *encoding* system is a mapping between each character (e.g. `a`) and a unique binary value, used to represent the character. \n",
     "\n",
@@ -270,7 +262,11 @@
   {
    "cell_type": "markdown",
    "id": "baf72c5d-d6ab-40a9-9b11-947db3c63fd2",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Each object type has a specific set of operations that can be used with it.\n",
     "    \n",
@@ -282,7 +278,11 @@
   {
    "cell_type": "markdown",
    "id": "f1552fad-fce4-4d73-b5ae-8e6ffc44aa18",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Examples of methods for string objects:\n",
     " - `upper` (converts string to upper case letters)\n",
@@ -333,7 +333,11 @@
   {
    "cell_type": "markdown",
    "id": "7514af93-27b5-4ae5-af46-7c4e28efcdc8",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "A full list of string methods can be found here:\n",
     "https://www.w3schools.com/python/python_ref_string.asp"
@@ -381,7 +385,11 @@
   {
    "cell_type": "markdown",
    "id": "34c34c2d",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Boolean value storage \n",
     "\n",
@@ -415,14 +423,6 @@
     "<br>https://bteccomputing.co.uk/use-of-binary-to-represent-negative-and-floating-point-numbers/\n",
     "<br>https://www.youtube.com/watch?v=L8OYx1I8qNg"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6aef9984",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
