--- a/weekly_labs/Week_09_Modules_and_Plotting/Week_09_1-Plotting_data.ipynb
+++ b/weekly_labs/Week_09_Modules_and_Plotting/Week_09_1-Plotting_data.ipynb
@@ -8,13 +8,14 @@
     }
    },
    "source": [
-    "# Introduction to Computer Programming\n",
+    "# Computer Programming and Algorithms\n",
     "\n",
-    "## Week 8.3: Plotting data\n",
+    "## Week 9.1: Plotting data\n",
     "\n",
     "* * *\n",
     "\n",
-    "<img src=\"img/full-colour-logo-UoB.png\" alt=\"Bristol\" style=\"width: 300px;\"/>"
+    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/full-colour-logo-UoB.png?raw=true\" width=\"20%\">\n",
+    "</p>"
    ]
   },
   {
@@ -327,7 +328,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
