HP renamed files

--- a/weekly_labs/Week_01_Objects/Week_01_2-Integers_Floating_Point.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_2-Integers_Floating_Point.ipynb
@@ -364,7 +364,7 @@
     }
    },
    "source": [
-    "# Scientific notation\n",
+    "# Scientific notation for decimal numbers\n",
     "The **mantissa** controls the *precision* of a number. \n",
     "<br>(A fixed point number, normalised so that a maximum of 1 significant figure (s.f.) is to the left of the decimal point)\n",
     "\n",
@@ -457,7 +457,7 @@
     }
    },
    "source": [
-    "# Floating point numbers\n",
+    "# Floating point binary numbers\n",
     "\n",
     "Binary **floating point** number storage is similar to *scientific notation* for decimal (base-10) values, but with:\n",
     "- a *binary* **mantissa** (normalised so that a maximum of 1 significant figure (s.f.) is to the left of the decimal point) \n",
