HP added week 8 file imports to notebooks for opening in colab

--- a/weekly_labs/Week_08_Reading_Data/Week_08.3-Modules_for_reading_files.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/Week_08.3-Modules_for_reading_files.ipynb
@@ -20,6 +20,30 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you are opening the notebook in Google Colab, you can import the data files to use with the code cells throughout the notebook by running the code cell below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "zsh:1: command not found: wget\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!wget https://raw.githubusercontent.com/engmaths/SEMT10002_2024/main/weekly_labs/Week_08_Reading_Data/temperature.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -524,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
