--- a/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
@@ -93,9 +93,7 @@
     "\n",
     "Characters are **indexed** with integer values, starting from 0\n",
     "\n",
-    "We can return the Nth character of a string with `string_name[N]`\n",
-    "\n",
-    "We can return the characters between element N and element M with `string_name[N:M]`"
+    "We can return the Nth character of a string with `string_name[N]`"
    ]
   },
   {
@@ -164,6 +162,22 @@
    "source": [
     "print(x[4])\n",
     "print(x[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2af63dac",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "We can return the characters between element N and element M with `string_name[N:M]`\n",
+    "\n",
+    "The starting value `N` is included in the range. \n",
+    "\n",
+    "The stop value `M` is excluded from the range. "
    ]
   },
   {
