--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
@@ -21,10 +21,27 @@
     "* Introduce the teaching team for CPA.\n",
     "* Give you an overview of what you'll be studying in CPA this year.\n",
     "* Overview some essential information about how the course will run, including what you can expect from us and what we expect from you.\n",
-    "* Give you some time to get to know each other\n",
+    "* Give you some time to get to know each other.\n",
     "* Provide some support for software installation on personal devices.\n",
+    "* Practice using the terminal to navigate the filesystem and run Python code.\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Lecturers \n",
+    "\n",
+    "- Dr Martin Garrad [Unit Director] (weeks 7, 13-21)\n",
+    "- Dr Hemma Philamore [Unit Director] (weeks 1, 8, 9)\n",
+    "- Prof Arthur Richards (weeks 2-5, 10)\n",
+    "- Dr Michael Rule (weeks 11-12)"
    ]
   },
   {
@@ -57,7 +74,7 @@
     "A set of well-defined instructions or steps to perform a specific task or solve a particular problem. \n",
     "<br>(Approximating the solution to an ODE, finding the shortest path from one location to another, sorting a set of values into an order...)\n",
     "\n",
-    "On this unit we will learn how to implement basic algorithms (e.g. for searching or sorting) in computer code."
+    "On this unit we will learn how to implement basic algorithms (e.g. for searching or sorting) in computer code. "
    ]
   },
   {
@@ -70,7 +87,7 @@
    "source": [
     "# Programming Language\n",
     "\n",
-    "A formal set of instructions and rules used to communicate with a computer. \n",
+    "A formal set of instructions and rules used to communicate with a computer. Must conform to a specific Syntax.\n",
     "<br>Enables programmers to write programs that can be executed by a computer to perform specific tasks. \n",
     "\n",
     "We will use the Python programming language but the principles we will study can be applied in any programming language "
@@ -108,7 +125,9 @@
     "- A tool you can use for your studies (data, calculation, modeling, simulation...). \n",
     "- A growing sector of the jobs market (software engineering, data science, AI, robotics...).\n",
     "- Increasing use of coding within jobs and areas of academia not traditionally related to computing.\n",
-    "- Coding is fun! (personal projects, competitions, charity sector...)"
+    "- Coding is fun! (personal projects, competitions, charity sector...)\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/GoL.gif?raw=true\" width=\"20%\">"
    ]
   },
   {
@@ -143,22 +162,6 @@
     "Beginner, no prior programming knowlegde.\n",
     "\n",
     "Suitable for students on engineering degree programmes"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Lecturers \n",
-    "\n",
-    "- Dr Martin Garrad [Unit Director] (weeks 7, 13-21)\n",
-    "- Dr Hemma Philamore [Unit Director] (weeks 1, 8, 9)\n",
-    "- Prof Arthur Richards (weeks 2-5, 10)\n",
-    "- Dr Michael Rule (weeks 11-12)"
    ]
   },
   {
@@ -220,7 +223,33 @@
     }
    },
    "source": [
-    "### Lab (Tuesday 1-3 pm)\n",
+    "# How you'll learn\n",
+    "\n",
+    "### Pre-watch/ pre-read material\n",
+    "\n",
+    "Each week (excluding consolidation weeks) you MUST view the pre-watch/pre-read material before coming to the lab class (Tuesday).\n",
+    "\n",
+    "This content is available as:\n",
+    "1) Videos\n",
+    "2) Google Colaboratory (Colab) notebook\n",
+    "\n",
+    "There are 3-4, videos per week, 10-15 minute each\n",
+    "\n",
+    "The Google Colab notebooks can be used to view and pre-read the text and code instead of, or in addition to, the videos. \n",
+    "\n",
+    "The recorded material is designed to help you work through the fundamental concepts for the week at your own pace and go over things multiple times if needed. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "\n",
+    "### Labs (Tuesday 1-3 pm)\n",
     "- Taught material to build on pre-watch/pre-read content\n",
     "- Code demonstrations\n",
     "- Lab exercises: Practise and demonstrate programming fundamentals by completing short and focused programming tasks\n",
@@ -266,6 +295,33 @@
     }
    },
    "source": [
+    "# Study Groups\n",
+    "\n",
+    "- You have all been assigned to a study group containing 6 students. \n",
+    "\n",
+    "- Each group has been assigned a number, and you should sit on the table with the same number as your group. \n",
+    "\n",
+    "- We expect you to sit on the same table for the entire duration of the course. \n",
+    "\n",
+    "- We also expect members of a study group to support each other throughout the course- programming shouldn't be a solitary activity and we encourage you to work on the lab exercises in pairs. \n",
+    "\n",
+    "- If you are stuck on an exercise, or don't understand something, please first ask the other members of your study group for support. \n",
+    "\n",
+    "- Similarly, if you finish with the lab exercises, we encourage you to help out other members of your study group- explaining something to somebody else is a great way to consolidate your learning. \n",
+    "\n",
+    "- Each study group will be assigned a teaching assistant, who will work with you throughout the course. \n",
+    "\n",
+    "- TAs will be available to offer support during the labs, and will also be responsible for providing formative feedback on your submitted work."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Keeping on top of this course\n",
     "2 hours a week is not enough for you to get a good mark on this course. While in some weeks it may be possible for you to complete everything within the labs, in general, we expect you to have to do some work in your own time. \n",
     "\n",
@@ -284,34 +340,9 @@
    "source": [
     "# Staying motivated on this course\n",
     "\n",
-    "For many of you, this will be your first exposure to programming. It's our strong belief that every person on this course is fully able to become a confident and capable programmer. However, programming (and especially learning to program) can also be incredibly frustrating- "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Study Groups\n",
+    "For many of you, this will be your first exposure to programming. It's our strong belief that every person on this course is fully able to become a confident and capable programmer. However, programming (and especially learning to program) can also be incredibly frustrating- often our code won't work and sometimes we'll get confusing error messages or see syntax we don't understand. This can then be compounded by the fact that some of our peers may not seem to be struggling at all (i.e someone may have done A level Computing, or self-taught themselves as a hobby). Unfortunately, every year, we see students decide that programming \"just isn't for them\". While we don't need everybody here to love programming, to access many of the modules in the later years of your course, you will be expected to be able to write code. \n",
     "\n",
-    "- You have all been assigned to a study group containing 6 students. \n",
-    "\n",
-    "- Each group has been assigned a number, and you should sit on the table with the same number as your group. \n",
-    "\n",
-    "- We expect you to sit on the same table for the entire duration of the course. \n",
-    "\n",
-    "- We also expect members of a study group to support each other throughout the course- programming shouldn't be a solitary activity and we encourage you to work on the lab exercises in pairs. \n",
-    "\n",
-    "- If you are stuck on an exercise, or don't understand something, please first ask the other members of your study group for support. \n",
-    "\n",
-    "- Similarly, if you finish with the lab exercises, we encourage you to help out other members of your study group- explaining something to somebody else is a great way to consolidate your learning. \n",
-    "\n",
-    "- Each study group will be assigned a teaching assistant, who will work with you throughout the course. \n",
-    "\n",
-    "- TAs will be available to offer support during the labs, and will also be responsible for providing formative feedback on your submitted work."
+    "Also remember that computing is a huge subject and by necessity we've had to skip over many details to focus on the core things you need in this course. This means it's completely normal to occasionally feel unsure or frustrated about something. With time, and practice, this will turn into confident and capability. But if you do find yourself struggling like this, please don't suffer in silence! Talk to us, your peers or your TA.  "
    ]
   },
   {
@@ -384,29 +415,6 @@
     }
    },
    "source": [
-    "# Pre-watch/ pre-read material\n",
-    "\n",
-    "Each week (excluding consolidation weeks) you MUST view the pre-watch/pre-read material coming to the lab class (Tuesday).\n",
-    "\n",
-    "This content is available as:\n",
-    "1) Videos\n",
-    "2) Google Colaboratory (Colab) notebook\n",
-    "\n",
-    "There are 3-4, videos per week, 10-15 minute each\n",
-    "\n",
-    "The Google Colab notebooks can be used to view and pre-read the text and code instead of, or in addition to, the videos. \n",
-    "\n",
-    "The recorded material is designed to help you work through the fundamental concepts for the week at your own pace and go over things multiple times if needed. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "# Opening Google Colab\n",
     "\n",
     "Go to Google Colab in a web browser https://colab.research.google.com/\n",
@@ -450,9 +458,16 @@
     "First, we would like to introduce yourself to the other members of your study group. \n",
     "\n",
     "We'll give you 10 minutes for this- you may want to discuss:\n",
-    "* Your name and where you are from\n",
-    "* How much programming you've done previously\n",
+    "* Your name and where you are from.\n",
+    "* How much programming you've done previously.\n",
     "* What you're excited or worried about in this course.\n",
+    "\n",
+    "### Ice-breaker (5 minutes)\n",
+    "\n",
+    "As a group, we'd like you to discuss and agree on estimates for the following quantities (please don't use Google or similar). The aim here is to get everybody on your table comfortable talking (and negotiating with each other). We've got some small prizes for the group that comes closest to each estimate.\n",
+    "\n",
+    "* How many computers are there in the world today?\n",
+    "* \n",
     "\n"
    ]
   },
@@ -470,7 +485,7 @@
     "\n",
     "* A web browser (to access Google Collab)\n",
     "* A bash terminal (i.e Git-bash, iterm2)\n",
-    "* A text editor (Sublime text)\n",
+    "* A text editor (Sublime text on personal machines, or gEdit on the lab machines)\n",
     "* Python3.12\n",
     "* Python Libraries numpy and matplotlib\n",
     "\n",
@@ -499,14 +514,10 @@
     "\n",
     "Now that you have your Terminal installed and setup, let's see what you can do with it. Start by opening a Terminal. You should see a screen like the image below (Mac and Linux users may appear slightly different):\n",
     "\n",
-    "![image](BlankTerminal.png)\n",
-    "\n",
     "<img src=\"https://github.com/engmaths/SEMT10002_2024/img/BlankTerminal.png?raw=true\" width=\"20%\">\n",
     "\n",
     "\n",
     "The $ symbol here is the bash prompt, indicating that you can enter bash commands. When you first open a terminal, it will by default open looking at a specific directory. You can find out which directory you are in by typing *pwd*, which stands for \"print working directory\". You can also see the contents of the directory you are in by typing *ls*. The image below shows what happens when I type these commands on my machine- as your files and folders are different to mine, your output will also be slightly different. \n",
-    "\n",
-    "![image](TerminalImage2.png)\n",
     "\n",
     "<img src=\"https://github.com/engmaths/SEMT10002_2024/img/TerminalImage2.png?raw=true\" width=\"20%\">\n",
     "\n",
@@ -587,7 +598,10 @@
     "xs = np.linspace(0, 100)\n",
     "ys = np.sin(xs)\n",
     "plt.plot(xs, ys)\n",
-    "plt.show()"
+    "plt.show()\n",
+    "```\n",
+    "\n",
+    "If you've finished all of these exercises, please help other members of your study group for the remainder of the session. If everybody in your group has finished, please feel free to leave early! If you aren't abl\n"
    ]
   },
   {
@@ -626,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
