HP updated week 8 and 9

--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
@@ -413,7 +413,11 @@
     "\n",
     "Select File >> Open Notebook >> Github\n",
     "\n",
-    "Under \"Enter a Github URL or search by organisation or user\", paste the link to this week's notebook (on blackboard)"
+    "Under \"Enter a Github URL or search by organisation or user\", paste the link to this week's notebook (on blackboard)\n",
+    "\n",
+    "You will need to login with a gmail account to run the interactive code cells. \n",
+    "\n",
+    "You can create an account here: https://accounts.google.com/lifecycle/steps/signup/name?ddm=0&dsh=S-486515162:1725811412833849&flowEntry=SignUp&flowName=GlifWebSignIn&TL=AKeb6mzfdqkyy6n5Ap2mbOARYW-k7Nfpjpow-iGnq_QB2sb7Ft6Su69Z1rvpjrEW"
    ]
   },
   {
