HP updated lab software setup

--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
@@ -544,13 +544,13 @@
    "source": [
     "# Demo - Running code in an IDE\n",
     "\n",
-    "An IDE (Integrated Development Environment) is a software application that provides a set of tools for coding, debugging, and building software applications.\n",
+    "An IDE (Integrated Development Environment) is a software application for writing, running, saving and viewing teh output of code.\n",
     "\n",
-    "An IDE includes a graphical interface with menus, toolbars, and panels, within a single environment.\n",
+    "Unlike a terminal applicatio, an IDE includes a graphical interface.\n",
     "\n",
     "There are several IDEs available. \n",
     "\n",
-    "We will the Visual Studio (VS) Code IDE"
+    "We will use Visual Studio (VS) Code IDE."
    ]
   },
   {
@@ -591,7 +591,7 @@
     "```\n",
     "***\n",
     "\n",
-    "3. Press 'Ctrl' + 'F5' to run the code, and select 'Python Debugger' if prompted. <br>The output will appear in the panel at the bottom of the window\n",
+    "3. Cilck the triangle shaped button in the top right-hand corner OR press 'Ctrl' + 'F5' to run the code, and select 'Python Debugger' if prompted. <br>The output of the code will appear in the panel at the bottom of the window\n",
     "\n",
     "***"
    ]
