--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
@@ -69,7 +69,7 @@
     }
    },
    "source": [
-    "# Algorithm\n",
+    "# Algorithms\n",
     "\n",
     "A set of well-defined instructions or steps to perform a specific task or solve a particular problem. \n",
     "<br>(Approximating the solution to an ODE, finding the shortest path from one location to another, sorting a set of values into an order...)\n",
@@ -455,6 +455,24 @@
     }
    },
    "source": [
+    "# Need more practise or want some more advanced information?  \n",
+    "\n",
+    "We understand that you are coming to this course from different backgrounds and with different levels of programming experience. \n",
+    "\n",
+    "At the end of each video there are mulitple links to:\n",
+    "- online examples to help you practise what you have seen\n",
+    "- online quizzes to help you to test your understanding \n",
+    "- articles with more advanced information in case you are curious to know more"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "# Introductions\n",
     "\n",
     "Now, it's time for us all to get to know each other a little bit. \n",
@@ -464,15 +482,7 @@
     "We'll give you 10 minutes for this- you may want to discuss:\n",
     "* Your name and where you are from.\n",
     "* How much programming you've done previously.\n",
-    "* What you're excited or worried about in this course.\n",
-    "\n",
-    "### Ice-breaker (5 minutes)\n",
-    "\n",
-    "As a group, we'd like you to discuss and agree on estimates for the following quantities (please don't use Google or similar). The aim here is to get everybody on your table comfortable talking (and negotiating with each other). We've got some small prizes for the group that comes closest to each estimate.\n",
-    "\n",
-    "* How many computers are there in the world today?\n",
-    "* \n",
-    "\n"
+    "* What you're excited or worried about in this course."
    ]
   },
   {
@@ -489,21 +499,54 @@
     "\n",
     "* A web browser (to access Google Collab)\n",
     "* A bash terminal (i.e Git-bash, iterm2)\n",
-    "* A text editor (Sublime text on personal machines, or gEdit on the lab machines)\n",
+    "* A text editor (Visual Studio (VS) Code)\n",
     "* Python3.12\n",
-    "* Python Libraries numpy and matplotlib\n",
+    "* Python Libraries: numpy and matplotlib\n",
     "\n",
-    "All of this software is already pre-installed on the computers in the labs. \n",
+    "All of this software is already pre-installed on the computers in the labs. We will complete some small set up tasks in class today. \n",
     "\n",
-    "Many of you will want to install this software on your own machines- we've put some instructions on Blackboard to show you how to do this. \n",
+    "Many of you will want to install this software on your own machines- we've put some instructions on Blackboard to show you how to do this. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Setting up the lab computer \n",
+    "\n",
+    "### Terminal application\n",
+    "\n",
+    "- Open the Terminal application\n",
+    "- Type the following line of code then press enter: `module load anaconda`\n",
+    "- Type the following line of code then press enter: `/opt/anaconda/3-2024/bin/conda init`\n",
+    "- Close the Terminal application\n",
+    "- Open the Terminal application\n",
+    "- Check that the new terminal dislpays the word `base` at the left of the screen where you enter the code. \n",
+    "\n",
+    "### Visual Studio (VS) Code application\n",
+    "\n",
+    "- Open the Visual Studio Code application\n",
+    "- Press Ctrl + Shift + P and then change the interpreter to base in teh drop-down menu that appears"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
     "\n",
     "The rest of this session is given over for you to run through these instructions (with support from us). \n",
     "\n",
     "Beyond this session, we will *not* be offering support with software installation on personal devices. \n",
     "\n",
-    "You can instead get help with this from IT services (link goes here). \n",
-    "\n",
-    "\n"
+    "You can instead get help with this from IT services (link goes here). "
    ]
   },
   {
@@ -607,24 +650,6 @@
     "\n",
     "If you've finished all of these exercises, please help other members of your study group for the remainder of the session. If everybody in your group has finished, please feel free to leave early! If you aren't abl\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Need more practise or want some more advanced information?  \n",
-    "\n",
-    "We understand that you are coming to this course from different backgrounds and with different levels of programming experience. \n",
-    "\n",
-    "At the end of each video there are mulitple links to:\n",
-    "- online examples to help you practise what you have seen\n",
-    "- online quizzes to help you to test your understanding \n",
-    "- articles with more advanced information in case you are curious to know more"
-   ]
   }
  ],
  "metadata": {
@@ -644,7 +669,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
