--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
@@ -127,7 +127,7 @@
     "- Increasing use of coding within jobs and areas of academia not traditionally related to computing.\n",
     "- Coding is fun! (personal projects, competitions, charity sector...)\n",
     "\n",
-    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/GoL.gif?raw=true\" width=\"20%\">"
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/GoL.gif?raw=true\" width=\"40%\">"
    ]
   },
   {
@@ -494,12 +494,16 @@
     "\n",
     "Now, it's time for us all to get to know each other a little bit. \n",
     "\n",
-    "First, we would like to introduce yourself to the other members of your study group. \n",
+    "First, we would like to introduce yourself to the other members of your study group and your TA.\n",
     "\n",
-    "We'll give you 10 minutes for this- you may want to discuss:\n",
+    "We'll give you 15 minutes for this- you may want to discuss:\n",
     "* Your name and where you are from.\n",
-    "* How much programming you've done previously.\n",
-    "* What you're excited or worried about in this course."
+    "* How much programming you've done previously- who in your group has done the most programming? who is starting from scratch?\n",
+    "* What you're excited or worried about in this course.\n",
+    "* What is your TA's name? How much programming have they done and how do they use code in their research (if at all)? How did they learn to program? What did they struggle with most when learning to program?\n",
+    "\n",
+    "Once you've finished, please go to menti.com and enter code: <CODE GOES HERE>\n",
+    "\n"
    ]
   },
   {
@@ -580,12 +584,12 @@
     "\n",
     "Now that you have your Terminal installed and setup, let's see what you can do with it. Start by opening a Terminal. You should see a screen like the image below (Mac and Linux users may appear slightly different):\n",
     "\n",
-    "<img src=\"https://github.com/engmaths/SEMT10002_2024/img/BlankTerminal.png?raw=true\" width=\"20%\">\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/BlankTerminal.png?raw=true\" width=\"60%\">\n",
     "\n",
     "\n",
     "The $ symbol here is the bash prompt, indicating that you can enter bash commands. When you first open a terminal, it will by default open looking at a specific directory. You can find out which directory you are in by typing *pwd*, which stands for \"print working directory\". You can also see the contents of the directory you are in by typing *ls*. The image below shows what happens when I type these commands on my machine- as your files and folders are different to mine, your output will also be slightly different. \n",
     "\n",
-    "<img src=\"https://github.com/engmaths/SEMT10002_2024/img/TerminalImage2.png?raw=true\" width=\"20%\">\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/TerminalImage2.png?raw=true\" width=\"60%\">\n",
     "\n",
     "\n",
     "If you compare the list we get from terminal, to the files shown in File Explorer you should see they are the same- as explained above, the terminal is a text-based interface, that allows us to do many of the same (and more!) tasks we can do with a graphical user interface. To start navigating the file system with the terminal, we can use the command *cd \\<name of folder>* (which stands for change directory). For example, if I want to see what's in the *Lab* folder, I would type:\n",
@@ -647,7 +651,7 @@
     "print(\"Hello, World!\")\n",
     "```\n",
     "\n",
-    "Save the file (in the directory \"FCP/Block_1\"), and then run it through the terminal by typing \n",
+    "Save the file (in the directory \"CPA/Block_1\"), and then run it through the terminal by typing \n",
     "\n",
     "```bash\n",
     "python3 Exercise1.py\n",
@@ -667,7 +671,7 @@
     "plt.show()\n",
     "```\n",
     "\n",
-    "If you've finished all of these exercises, please help other members of your study group for the remainder of the session. If everybody in your group has finished, please feel free to leave early! If you aren't abl\n"
+    "If you've finished all of these exercises, please help other members of your study group for the remainder of the session. If everybody in your group has finished, please feel free to leave early! \n"
    ]
   },
   {
@@ -695,7 +699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
