HP updated week 8 and week 9

--- a/weekly_labs/Week_08_Reading_Data/Week_08-Lecture.ipynb
+++ b/weekly_labs/Week_08_Reading_Data/Week_08-Lecture.ipynb
@@ -20,7 +20,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Open the Google Colab notebook for this class\n",
     "\n",
@@ -57,7 +61,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Question \n",
     "\n",
@@ -71,7 +79,6 @@
     "               |\n",
     "               |--- temperature.csv\n",
     "```\n",
-    "Is the file `temperature.csv` upstream or downstream of the file `program_1.py`?\n",
     "\n",
     "What command would you use to open the file `temperature.csv` using `program_1.py`?\n",
     "\n",
@@ -80,7 +87,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Aim \n",
     "\n",
@@ -93,7 +104,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Importing a downstream file\n",
     "\n",
@@ -112,15 +127,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Importing an upstream file\n",
     "\n",
@@ -141,15 +153,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Importing a binary file\n",
     "\n",
@@ -170,15 +179,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Using imported numerical data and saving a CSV file\n",
     "\n",
@@ -210,7 +216,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "c) Using the table below, find the grade associated with each student mark.<br>Save the student ID number, marks and associated grades as a new csv file called `student_grades.csv`, in the same directory as `student_marks.csv`\n",
     "\n",
@@ -256,7 +266,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Importing saved data "
    ]
@@ -270,18 +284,28 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Lab Exercises"
+    "# Lab exercises\n",
+    "\n",
+    "Complete the exercises by working in an IDE "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exercise 1 - Importing data from upstream and downstream locations\n",
     "\n",
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_1', find and modify the program 'program_10' to:\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_1', find and modify the program `program_10.py` to:\n",
     "1. Import the file rainfall.csv and display the contents of the file\n",
     "1. Import the file unit_description.txt and display the contents of the file\n",
     "1. Import the file cat.png and display the contents of the file"
@@ -289,7 +313,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exercise 2 - Reading and using data from text files"
    ]
@@ -298,15 +326,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_2', find and modify the program 'program_11' to:\n",
-    "1. Import the file rainfall.csv and print the mean and standard deviation of the monthly rainfall values\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_2', find and modify the program `program_11.py` to:\n",
+    "1. Import the file rainfall.csv and print the mean and standard deviation of the monthly rainfall values. Standard deviation $\\sigma = \\sqrt{\\frac{1}{N} \\sum_{i=1}^{N} (x_i - \\mu)^2}$, where $N$ is the total number of values, $x_i$ is each individual value in the population, $\\mu$ is the mean of all values. \n",
     "2. Import the file file xyz_data.csv and print a list containing the sum of x and z for each row in xyz_data.csv\n",
-    "3. Import the file unit_content.txt and print the third line\n"
+    "3. Import the file unit_description.txt and print the third line\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Exercise 3 - Saving data to a csv file"
    ]
@@ -315,26 +347,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_3', find and modify the program 'program_12' to:\n",
-    "1. Save the tuple, `cities`, to a csv file\n",
-    "2. Save the nested list `populations` to a csv file, where city is the first *row* and population is the second\n",
-    "3. Save the nested list `populations` to a csv file, where city is the first *column* and population is the second\n",
-    "4. Import the file file xyz_data.csv, create a list containing the sum of x and z for each row in xyz_data.csv, save columns x and z to a new file, along with a third column containing the values of the list you just created. "
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_3', find and modify the program `program_12.py` to:\n",
+    "1. Save the list, `cities`, to a csv file\n",
+    "2. Save `cities` and `populations` to a csv file, where cities is the first *row* and population is the second\n",
+    "2. Save `cities` and `populations` to a csv file, where cities is the first *column* and populations is the second\n",
+    "4. Import the file file xyz_data.csv. <br>Create a list containing the sum of x and z for each row in xyz_data.csv. <br> Save columns x and z to a new file, along with a third column containing the values of the list you just created. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Exercise 4 - Real world programming example "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 4 - Real world programming example \n",
-    "### Robot ..."
+    "### Sensor data from a robot \n",
+    "\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_4':\n",
+    "1. Create a Python file called robot_sensors.py\n",
+    "2. Import sense.csv, the data from 3 sensors mounted on the front of a robot that sense distance to the nearest object. If the first item imported begins with `\\ufeff`, include an additional argument when calling the `open` function. The additional argument is `encoding='utf-8-sig'`. \n",
+    "3. The units of the distance measurements are given in cm. <br>Round the values to 1 d.p. then convert the values so they are represented in mm. <br>Save the new values as file sense_mm.csv "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Exercise 5 - Exploring other modules for importing data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exercise 5 - Exploring other modules for importing data\n",
     "Read the information about using the `json` module to import JSON files. \n",
     "\n",
     "Exercise 5 is given at the end of this information \n",
@@ -350,7 +407,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "The typical JSON file format looks very similar to a Python Dictionary.\n",
     "\n",
@@ -370,7 +431,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Objects can be stored and recalled using a key-value pair.\n",
     "\n",
@@ -381,7 +446,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Reading a JSON file\n",
     "\n",
@@ -402,7 +471,11 @@
   {
    "cell_type": "code",
    "execution_count": 430,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -425,7 +498,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "As we saw with CSV files the imported data stored is a string for each line in the JSON file\n",
     "\n",
@@ -435,7 +512,11 @@
   {
    "cell_type": "code",
    "execution_count": 275,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -459,7 +540,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# The `json` module\n",
     "\n",
@@ -472,7 +557,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Reading a file using the `json` module\n",
     "\n",
@@ -507,7 +596,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "Let's look at the documentation for `json.load`\n",
     "\n",
@@ -522,7 +615,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Using imported numerical data\n",
     "\n",
@@ -554,7 +651,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Saving data to a JSON file using the `json` module"
    ]
@@ -587,7 +688,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "The `load` function can be used to read the JSON file again"
    ]
@@ -614,7 +719,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Example: Using imported numerical data and saving a JSON file\n",
     "\n",
@@ -648,7 +757,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Limitations of `json` module\n",
     "\n",
@@ -659,10 +772,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Practise importing json files\n",
-    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_5', the file `sensor_data.json` contains data from multiple sensors installed in a manufacturing plant. <br>Each sensor records its ID, timestamp, and the temperature it measures. Modify program_14.py to:\n",
+    "In the directory, 'Week_8', sub-subdirectory 'Lab_Exercise_5', the file `sensor_data.json` contains data from multiple sensors installed in a manufacturing plant. <br>Each sensor records its ID, timestamp, and the temperature it measures. Modify `program_14.py` to:\n",
     "1. Import the data from `sensor_data.json` and print the values for each sensor as 3 individual lists \n",
     "2. Calculate the average temperature for each sensor and assign each value to a variable \n",
     "3. Save these values to a new JSON file `mean_sensor_data`, so that they can be callable when imported to a program using keys: `mean_sensor_1`, `mean_sensor_2` and `mean_sensor_3`. "
@@ -693,7 +810,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.9"
   },
   "rise": {
    "theme": "white"
