HP updated intro lecture

--- a/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_0-Course_Introduction.ipynb
@@ -248,13 +248,18 @@
     }
    },
    "source": [
-    "### Open the Google Colab notebook for this class\n",
+    "\n",
+    "# Opening a Google Colab notebook\n",
     "\n",
     "Go to Google Colab in a web browser https://colab.research.google.com/\n",
     "\n",
     "Select File >> Open Notebook >> Github\n",
     "\n",
-    "Under \"Enter a Github URL or search by organisation or user\", paste the link to this week's notebook (on blackboard)"
+    "Under \"Enter a Github URL or search by organisation or user\", paste the link to this week's notebook (on blackboard)\n",
+    "\n",
+    "You will need to login with a gmail account to run the interactive code cells. \n",
+    "\n",
+    "You can create an account here: https://accounts.google.com/lifecycle/steps/signup/name?ddm=0&dsh=S-486515162:1725811412833849&flowEntry=SignUp&flowName=GlifWebSignIn&TL=AKeb6mzfdqkyy6n5Ap2mbOARYW-k7Nfpjpow-iGnq_QB2sb7Ft6Su69Z1rvpjrEW"
    ]
   },
   {
@@ -553,7 +558,10 @@
     "### Visual Studio (VS) Code \n",
     "\n",
     "- Open the Visual Studio Code application\n",
-    "- Press Ctrl + Shift + P and then change the interpreter to base in the drop-down menu that appears"
+    "- If prompted to install a Python extension choose yes\n",
+    "- Press Ctrl + Shift + P to open the Command Palette\n",
+    "- Type 'Python: Select Interpreter' in the search bar or scroll down to find this option and click on it when found.  \n",
+    "- Select Python 3.12.3 (base)"
    ]
   },
   {
@@ -699,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
