HP updated intro lecture

--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
@@ -472,7 +472,10 @@
     "### Visual Studio (VS) Code IDE\n",
     "\n",
     "- Open the Visual Studio Code application\n",
-    "- Press Ctrl + Shift + P and then change the interpreter to base in the drop-down menu that appears"
+    "- If prompted to install a Python extension choose yes\n",
+    "- Press Ctrl + Shift + P to open the Command Palette\n",
+    "- Type 'Python: Select Interpreter' in the search bar or scroll down to find this option and click on it when found.  \n",
+    "- Select Python 3.12.3 (base)"
    ]
   },
   {
