HP updated week 1

--- a/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "# String value storage \n",
     "\n",
-    "Strings are stored on a computer as a series of bytes (8 bit number). \n",
+    "Strings are stored on a computer as a series of bytes (8 bit binary number). \n",
     "\n",
     "An *encoding* system is a mapping between each character (e.g. `a`) and a unique binary value, used to represent the character. \n",
     "\n",
