HP updated week 1

--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd19cfc4",
+   "id": "c2e7fa99",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -139,12 +139,14 @@
     "\n",
     "Each number is formed by finding the sum of base-2 numbers, each multiplied by a factor **1 or 0**.\n",
     "\n",
-    "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/binary_float_a.png?raw=true\" width=\"75%\">"
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/whole_number.png?raw=true\" width=\"30%\">\n",
+    "\n",
+    "<img src=\"https://github.com/engmaths/SEMT10002_2024/blob/main/img/fractional_number.png?raw=true\" width=\"30%\">\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "52f5a4a9",
+   "id": "70e79ee3",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -156,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e656eb4c",
+   "id": "4a62b43d",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
