HP updated week 1

--- a/weekly_labs/Week_01_Objects/Week_01_2-Integers_Floating_Point.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_2-Integers_Floating_Point.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "# Computer Programming and Algorithms\n",
     "\n",
-    "## Week 1.2: Variable Types - Integers and Floating Point\n",
+    "## Week 1.2: Object Types - Integers and Floating Point\n",
     "\n",
     "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/full-colour-logo-UoB.png?raw=true\" width=\"20%\">\n",
     "</p>"
@@ -278,7 +278,7 @@
    "source": [
     "# Fractional number storage on a computer\n",
     "\n",
-    "To store fractional decimal numbers as binary, base-2 numbers with **negative exponents** are used. \n",
+    "To store fractional numbers as binary, base-2 numbers with **negative exponents** are used. \n",
     "\n",
     "Consider the number 4.5 \n",
     "\n",
