--- a/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01_3-Strings_Booleans.ipynb
@@ -11,7 +11,7 @@
    "source": [
     "# Computer Programming and Algorithms\n",
     "\n",
-    "## Week 1.3: Variable Types -  Strings and Booleans\n",
+    "## Week 1.3: Object Types -  Strings and Booleans\n",
     "\n",
     "<img src=\"https://github.com/engmaths/EMAT10007_2023/blob/main/weekly_content/img/full-colour-logo-UoB.png?raw=true\" width=\"20%\">\n",
     "</p>"
