HP updated week 1

--- a/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
+++ b/weekly_labs/Week_01_Objects/Week_01-Lecture.ipynb
@@ -153,7 +153,12 @@
     }
    },
    "source": [
-    "The limited number of bits used to store floating point numbers can lead to inexact storage of fractional numbers, known as floating point error. "
+    "__Floating Point Error__\n",
+    "\n",
+    "\n",
+    "A limited number of bits used to store floating point numbers (`float`)\n",
+    "\n",
+    "Can lead to inexact storage of decimal numbers, known as *floating point error*. "
    ]
   },
   {
